spacing for home page fixed

--- a/src/styles/layout/_body.scss
+++ b/src/styles/layout/_body.scss
@@ -1,4 +1,4 @@
 main {
     background-color: $backgroundColour;
-    padding: 70px 0 20px 10px;
+    padding: 70px 0 20px 0;
 }
