--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 
 .content-wrapper {
-    max-width: 360px;
-    padding-top: 30px;
+    max-width: 390px;
+    padding-top: 20px;
     margin: auto;
 
 }
@@ -11,19 +11,17 @@
 }
 
 .movie-grid {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 #movie-box {
     
     display: flex;
     box-shadow: $boxShadow;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 20px;
     background-color: #FAFEFF;
-    max-width: 360px;
+    max-width: 390px;
 
     img {
         width: 160px;
@@ -71,17 +69,24 @@ select {
     padding-right: 55px;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 750px) {
+    
+    #movie-box {
+        max-width: 350px;
+    }
     
     .movie-grid { 
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .content-wrapper {
         margin: auto;
-        max-width: 740px;
+        max-width: 700px;
         padding-bottom: 20px;
     }
 
@@ -99,16 +104,17 @@ select {
 
 }
 
-@media (min-width: 1080px) {
+@media (min-width: 1100px) {
     
     .content-wrapper {
-        max-width: 1080px;
+        max-width: 1050px;
     }
 
     .movie-grid { 
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
+        max-width: 1050px;
     }
 
     #movie-box:nth-child(3) {
@@ -117,15 +123,16 @@ select {
 
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1500px) {
     .content-wrapper {
-        max-width: 1440px;
+        max-width: 1400px;
     }
 
     .movie-grid { 
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
+        max-width: 1400px;
     }
 
     #movie-box:nth-child(4) {
